tests/parsing/smtlib/v2.6/errors/023_var_binding_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/023_var_binding_unclosed_2.smt2", line 2, character 20-22:
2 | (assert (let ((x 42 53)) (= x 2)))
                        ^^
Error while parsing a variable binding, read the integer '53',
      but expected a closing parenthesis.
